--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="contact_name">Contact Name</string>
     <string name="contact_number">Contact number</string>
     <string name="contact_image">Contact image</string>
+    <string name="floating">floating</string>
 </resources>
